amended more typois

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,7 +19,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
-              <%= link_to "Add task", new_tasks_path, class: "dropdown-item"%>
+              <%= link_to "Add task", new_task_path, class: "dropdown-item"%>
             </li>
             <li>
               <%= link_to "Add appointment", new_appointment_path, class: "dropdown-item"%>
