--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Tasks", tasks_path, class: "nav-link" %>
+          <%= link_to "Tasks", task_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Appointments", appointments_path, class: "nav-link" %>
@@ -15,7 +15,7 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-            Dropdown
+            Add something?
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
